@@ -267,10 +267,12 @@ class BzrDir(object):
             return self.find_repository()
         except errors.NoRepositoryPresent:
             return self.create_repository()
-        
+
     @staticmethod
-    def create_branch_convenience(base, force_new_repo=False,
-                                  force_new_tree=None, format=None):
+    def create_branch_convenience(base=None, transport=None,
+                                  force_new_repo=False,
+                                  force_new_tree=None, format=None,
+                                  ):
         """Create a new BzrDir, Branch and Repository at the url 'base'.
 
         This is a convenience function - it will use an existing repository
@@ -289,17 +291,28 @@ class BzrDir(object):
         data is created on disk and NotLocalUrl is raised.
 
         :param base: The URL to create the branch at.
+        :param transport: An alternate way to specify the URL.
+                         'format' must also be specified.
         :param force_new_repo: If True a new repository is always created.
         :param force_new_tree: If True or False force creation of a tree or 
                                prevent such creation respectively.
         :param format: Override for the for the bzrdir format to create
         """
+        if base is None and transport is None:
+            raise AssertionError('You should specify one of '
+                                 'base or transport parameter')
         if force_new_tree:
+            if base:
+                transport = get_transport(base)
             # check for non local urls
-            t = get_transport(safe_unicode(base))
-            if not isinstance(t, LocalTransport):
-                raise errors.NotLocalUrl(base)
-        bzrdir = BzrDir.create(base, format)
+            if not isinstance(transport, LocalTransport):
+                raise errors.NotLocalUrl(transport.base)
+        if format is None:
+            format = BzrDirFormat.get_default_format()
+        if base:
+            bzrdir = BzrDir.create(base, format)
+        else:
+            bzrdir = format.initialize_on_transport(transport)
         repo = bzrdir._find_or_create_repository(force_new_repo)
         result = bzrdir.create_branch()
         if force_new_tree or (repo.make_working_trees() and 
