@@ -18,6 +18,13 @@ IN DEVELOPMENT
       that we can pass in the Transport that we already have.
       (John Arbash Meinel, #75721)
 
+    * ``bzr init`` should only connect to the remote location one time.
+      We have been connecting several times because we forget to pass
+      around the Transport object. This modifies
+      ``BzrDir.create_branch_convenienve``, so that we can pass in the
+      Transport that we already have.
+     (John Arbash Meinel, Vincent Ladeuil, #111702)
+
 bzr 0.16rc2  2007-04-30
 
   BUGFIXES:
